--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1,4 +1,4 @@
 # scripts.yaml
 scripts:
-  start: deno run --allow-net server.ts
+  start: deno run --allow-net --unstable --allow-env --allow-read --allow-plugin --allow-write server.ts
   test: deno test --allow-net server_test.ts
